--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "kht-ui",
   "version": "0.0.1",
   "description": "KHT React component library",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KristofferTroncoso/kht-ui.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
