--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "type": "git",
     "url": "https://github.com/KristofferTroncoso/kht-ui.git"
   },
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d dist"
   },
   "keywords": [
     "React",
     "UI"
   ],
   "author": "KristofferTroncoso",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0"
+  }
 }
