--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.0.0",
     "@storybook/react": "^5.0.0",
     "babel-loader": "^8.0.5",
+    "prop-types": "^15.7.2",
     "styled-components": "^4.1.3"
   },
   "dependencies": {
