--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@storybook/react": "^5.0.0",
     "babel-loader": "^8.0.5",
     "prop-types": "^15.7.2",
-    "styled-components": "^4.1.3"
+    "react-styleguidist": "^9.0.3",
+    "styled-components": "^4.1.3",
+    "webpack": "^4.29.6"
   },
   "dependencies": {
     "react": "^16.8.4",
