--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 9001 -c .storybook",
-    "build": "babel src -d dist"
+    "storybook": "start-storybook -p 3000 -c .storybook",
+    "build": "babel src -d dist",
+    "start": "npm run storybook"
   },
   "keywords": [
     "React",
