--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   ],
   "author": "KristofferTroncoso",
   "license": "MIT",
+  "dependencies": {
+    "styled-components": "^4.1.3",
+    "prop-types": "^15.7.2"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
@@ -27,12 +31,10 @@
     "@storybook/addon-backgrounds": "^5.0.0",
     "@storybook/react": "^5.0.0",
     "babel-loader": "^8.0.5",
-    "prop-types": "^15.7.2",
     "react-styleguidist": "^9.0.3",
-    "styled-components": "^4.1.3",
     "webpack": "^4.29.6"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
