--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "type": "git",
     "url": "https://github.com/KristofferTroncoso/kht-ui.git"
   },
-  "private": true,
+  "private": false,
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 3000 -c .storybook",
@@ -19,6 +20,7 @@
   ],
   "author": "KristofferTroncoso",
   "license": "MIT",
+  "files": ["dist"],
   "dependencies": {
     "styled-components": "^4.1.3",
     "prop-types": "^15.7.2"
