--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   ],
   "author": "KristofferTroncoso",
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "styled-components": "^4.1.3",
     "prop-types": "^15.7.2"
@@ -32,8 +34,12 @@
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-backgrounds": "^5.0.0",
     "@storybook/react": "^5.0.0",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@types/styled-components": "^4.1.12",
     "babel-loader": "^8.0.5",
     "react-styleguidist": "^9.0.3",
+    "typescript": "^3.3.4000",
     "webpack": "^4.29.6"
   },
   "peerDependencies": {
