--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@storybook/react": "^5.0.0",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "@types/storybook__react": "^4.0.1",
     "@types/styled-components": "^4.1.12",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "react-styleguidist": "^9.0.3",
     "typescript": "^3.3.4000",
