--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 3000 -c .storybook",
-    "build": "babel src -d dist",
+    "build": "tsc",
     "start": "npm run storybook"
   },
   "keywords": [
