--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 3000 -c .storybook",
+    "storybook": "start-storybook -p 9000 -c .storybook",
     "build": "tsc",
     "start": "npm run storybook"
   },
@@ -32,14 +32,16 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-backgrounds": "^5.0.0",
-    "@storybook/react": "^5.0.0",
+    "@storybook/addon-backgrounds": "^5.0.6",
+    "@storybook/react": "^5.0.6",
+    "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/storybook__react": "^4.0.1",
     "@types/styled-components": "^4.1.12",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
+    "prismjs": "^1.16.0",
     "react-styleguidist": "^9.0.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6"
