--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/storybook__react": "^4.0.1",
-    "@types/styled-components": "^4.1.12",
+    "@types/styled-components": "4.1.8",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "prismjs": "^1.16.0",
