--- a/package.json
+++ b/package.json
@@ -2,30 +2,30 @@
   "name": "kht-ui",
   "version": "1.0.3",
   "description": "KHT React component library",
+  "author": "KristofferTroncoso",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/KristofferTroncoso/kht-ui.git"
   },
+  "keywords": [
+    "React",
+    "UI"
+  ],
   "private": false,
   "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 9000 -c .storybook",
     "build": "tsc",
     "start": "npm run storybook"
   },
-  "keywords": [
-    "React",
-    "UI"
-  ],
-  "author": "KristofferTroncoso",
-  "license": "MIT",
-  "files": [
-    "dist"
-  ],
   "dependencies": {
     "styled-components": "^4.1.3",
-    "prop-types": "^15.7.2"
+    "prismjs": "^1.16.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -41,7 +41,6 @@
     "@types/styled-components": "4.1.8",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
-    "prismjs": "^1.16.0",
     "react-styleguidist": "^9.0.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6"
