--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "storybook": "start-storybook -p 9000 -c .storybook",
     "build": "tsc",
     "start": "npm run storybook"
@@ -34,14 +34,18 @@
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-backgrounds": "^5.0.6",
     "@storybook/react": "^5.0.6",
+    "@types/jest": "^24.0.11",
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/storybook__react": "^4.0.1",
     "@types/styled-components": "4.1.8",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
+    "jest": "^24.7.1",
     "react-styleguidist": "^9.0.3",
+    "react-test-renderer": "^16.8.6",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6"
   },
