--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "start": "npm run storybook"
   },
   "dependencies": {
-    "styled-components": "^4.1.3",
-    "prismjs": "^1.16.0"
+    "prismjs": "^1.16.0",
+    "prop-types": "^15.7.2",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
