--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kht-ui",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "KHT React component library",
   "author": "KristofferTroncoso",
   "license": "MIT",
@@ -17,12 +17,6 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "test": "jest",
-    "storybook": "start-storybook -p 9000 -c .storybook",
-    "build": "tsc",
-    "start": "npm run storybook"
-  },
   "dependencies": {
     "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
@@ -48,11 +42,19 @@
     "jest": "^24.7.1",
     "react-styleguidist": "^9.0.3",
     "react-test-renderer": "^16.8.6",
+    "rimraf": "^2.6.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6"
   },
   "peerDependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "scripts": {
+    "test": "jest",
+    "storybook": "start-storybook -p 9000 -c .storybook",
+    "build": "rimraf dist && tsc",
+    "start": "npm run storybook",
+    "deploy": "npm run build && npm publish"
   }
 }
