Add storysource addon for storybook

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@storybook/addon-backgrounds": "^5.0.11",
+    "@storybook/addon-storysource": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "@types/jest": "^24.0.13",
     "@types/prismjs": "^1.16.0",
